fix: null-safety and code quality improvements in expression trigger infrastructure
Add null literal handling in ExpressionToQueryTranslator (== null ->
attributeIsNull, != null -> attributeIsNotNull, ordered comparisons
rejected). Fix three NPE paths where ConstantOperand.getValue() returns
null: in translateComparison, extractReferenceAttributePath, and
extractAttributeName. Add null-safe path recording in AccessedDataFinder.

Code quality: add final to for-each variables, replace Collections.emptySet
with Set.of, fix misleading localizedAssociatedData error message, update
ExpressionIndexTrigger JavaDoc for all DependencyType values.

16 new tests covering null literals, reversed operands, unsupported
variables/properties, dynamic reference name rejection, merge optimization,
new dependency types, localized attributes, and group entity ref-attrs.

Ref: #8